# apps/auth-service/src/controllers/auth.controller.ts
@@ -1,5 +1,5 @@
 import { Request, Response, NextFunction } from "express";
-import bcrypt from "bcryptjs"
+import bcrypt from "bcryptjs";
 import {
   checkOtpRestriction,
   sendOtp,
@@ -8,7 +8,9 @@ import {
   verifyOtp,
 } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookie";
 
 // Register a new user
 export const userRegistration = async (
@@ -78,8 +80,62 @@ export const verifyUser = async (
 
     res.status(201).json({
       success: true,
-      message: "User registered successfully!"
-    })
+      message: "User registered successfully!",
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+
+    if (!email || !password) {
+      return next(new ValidationError("Email and Password are required"));
+    }
+
+    const user = await prisma.user.findUnique({
+      where: {
+        email,
+      },
+    });
+
+    if (!user) {
+      return next(new AuthError("User doesn't exists!"));
+    }
+
+    //Verify password
+    const isMatch = await bcrypt.compare(password, user.password!);
+
+    if (!isMatch) {
+      return next(new AuthError("Invalid email or password!"));
+    }
+
+    //Generate access and refresh token
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      { expiresIn: "15m" }
+    );
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      { expiresIn: "7d" }
+    );
+
+    //Store the refresh and access token in an httpOnly secure cookie
+    setCookie(res, "refresh_token", refreshToken);
+    setCookie(res, "access_token", accessToken);
+
+    res.status(200).json({
+      message: "Login successful!",
+      user: { id: user.id, email: user.email, name: user.name },
+    });
   } catch (error) {
     return next(error);
   }
