# apps/auth-service/src/routes/auth.route.ts
@@ -1,8 +1,14 @@
 import Express, { Router } from "express";
-import { userRegistration } from "../controllers/auth.controller";
+import {
+  loginUser,
+  userRegistration,
+  verifyUser,
+} from "../controllers/auth.controller";
 
 const router: Router = Express.Router();
 
 router.post("/user-registration", userRegistration);
+router.post("/verify-user", verifyUser);
+router.post("/login", loginUser);
 
-export default router
+export default router;
